style: Fix spacing between fileter and sort buttons

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -68,10 +68,11 @@
 }
 
 .job-buttons {
+    width: 100%;
     display: flex;
-    /* justify-content: space-between;
+    justify-content: space-between;
     align-items: center;
-    align-content: center; */
+    align-content: center;
     flex-wrap: wrap;
 }
 
